--- a/DumpInspector/MainWindow.xaml
+++ b/DumpInspector/MainWindow.xaml
@@ -2,8 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:self="clr-namespace:ProjectRH.DumpInspector"
-        Title="Ricoh NVRAM Reader" Width="300"
-        SizeToContent="WidthAndHeight" Loaded="Window_Loaded" ResizeMode="NoResize" MinWidth="300" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" Icon="/ProjectRH.DumpInspector;component/ricoh_32x32.ico">
+        Title="Ricoh NVRAM Reader" SizeToContent="Manual" Loaded="Window_Loaded" ResizeMode="CanResizeWithGrip" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" Icon="/ProjectRH.DumpInspector;component/ricoh_32x32.ico" Width="500" MinWidth="300" MinHeight="180" MaxHeight="180">
     
     <Window.CommandBindings>
         <CommandBinding Command="self:Commands.Open"   Executed="OpenCommand_Executed" />
@@ -52,13 +51,16 @@
                   CanUserReorderColumns="False" CanUserResizeColumns="False"
                   CanUserSortColumns="False" CanUserResizeRows="False"
                   CanUserAddRows="False" AreRowDetailsFrozen="True"
-                  ColumnWidth="Auto" HeadersVisibility="None" MinColumnWidth="90" AlternatingRowBackground="#F9F9F9" IsReadOnly="True" SelectionMode="Single" SelectionUnit="Cell" GridLinesVisibility="None" BorderThickness="0" FontFamily="Segoe UI">
+                  ColumnWidth="*" HeadersVisibility="None" 
+                  AlternatingRowBackground="#F9F9F9" 
+                  IsReadOnly="True" SelectionMode="Single" SelectionUnit="Cell" 
+                  GridLinesVisibility="Vertical" BorderThickness="0" FontFamily="Segoe UI">
                 
             <DataGrid.Columns>
-                <DataGridTemplateColumn>
+                <DataGridTemplateColumn Width="Auto">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Width="90" Padding="0" Click="EditPassword" HorizontalAlignment="Stretch">Edit</Button>
+                            <Button Width="75" Margin="3,0,3,0" Padding="0" Click="EditPassword" HorizontalAlignment="Stretch">Edit</Button>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
