--- a/DumpInspector/PasswordEditWindow.xaml
+++ b/DumpInspector/PasswordEditWindow.xaml
@@ -2,11 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Edit Administrator Login"
-        Width="295.489" WindowStyle="ToolWindow"
+        Width="400" WindowStyle="ToolWindow"
         Height="Auto" SizeToContent="Height"
         MinHeight="150"
-        MaxHeight="150"
-        >
+        MaxHeight="150" WindowStartupLocation="CenterOwner">
     <StackPanel Margin="10">
         <Grid>
             <Label Content="Name" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="18,0,0,0"/>
