--- a/DumpInspector/ScannerSettingsWindow.xaml
+++ b/DumpInspector/ScannerSettingsWindow.xaml
@@ -1,28 +1,33 @@
 ﻿<Window x:Class="ProjectRH.DumpInspector.ScannerSettingsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:custom="clr-namespace:ProjectRH.DumpInspector"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:DI="clr-namespace:ProjectRH.DumpInspector"
         Title="Scanner Settings"
-        Width="266" WindowStyle="ToolWindow"
-        Height="164" SizeToContent="Height"
-        MinHeight="150"
-        MaxHeight="300" WindowStartupLocation="CenterOwner" mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006">
+        WindowStyle="ToolWindow"
+        WindowStartupLocation="CenterOwner" ResizeMode="NoResize" SizeToContent="WidthAndHeight" d:DesignWidth="287" d:DesignHeight="169">
+    
+    <Window.Resources>
+        <DI:HexByteConverter x:Key="HexByteConverter" />
+    </Window.Resources>
+    
     <StackPanel Margin="10" FlowDirection="LeftToRight" VerticalAlignment="Bottom">
         <Grid Height="89">
             <Label Content="UADVersion" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="6,8,0,0"/>
-            <ComboBox Margin="115,12,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="32" />
-            <custom:CharacterRestrictedTextBox x:Name="LoginMajorByteHex" CharacterRestrictionRegex="^[0-9a-fA-F]+$"  Margin="115,40,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" MaxLength="2" />
             <Label Content="LoginMajorByte" HorizontalAlignment="Left" Margin="6,36,0,0" VerticalAlignment="Top" />
             <Label Content="LoginMinorBytes" HorizontalAlignment="Left" Margin="6,62,0,0" VerticalAlignment="Top" />
-            <custom:CharacterRestrictedTextBox Margin="115,63,0,0" x:Name="LoginMinorByte1Hex" CharacterRestrictionRegex="^[0-9a-fA-F]+$" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" />
-            <custom:CharacterRestrictedTextBox Margin="140,63,0,0" x:Name="LoginMinorByte2Hex" CharacterRestrictionRegex="^[0-9a-fA-F]+$" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" />
-            <custom:CharacterRestrictedTextBox Margin="165,63,0,0" x:Name="LoginMinorByte3Hex" CharacterRestrictionRegex="^[0-9a-fA-F]+$" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" RenderTransformOrigin="-0.9,0.556" />
-            <custom:CharacterRestrictedTextBox Margin="190,63,0,0" x:Name="LoginMinorByte4Hex" CharacterRestrictionRegex="^[0-9a-fA-F]+$" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" RenderTransformOrigin="-1.2,0.556" />
-            <custom:CharacterRestrictedTextBox Margin="215,63,0,0" x:Name="LoginMinorByte5Hex" CharacterRestrictionRegex="^[0-9a-fA-F]+$" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" RenderTransformOrigin="-1.95,0.5" />
+            <ComboBox Margin="115,12,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Name="UADVersionComboBox" />
+            <DI:CharacterRestrictedTextBox CharacterRestrictionRegex="^[0-9a-fA-F]+$" MaxLength="2" Text="{Binding Path=FirmwareDefinition.LoginMajorByte, Converter={StaticResource HexByteConverter}}" Margin="115,40,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" />
+            <DI:CharacterRestrictedTextBox CharacterRestrictionRegex="^[0-9a-fA-F]+$" MaxLength="2" Text="{Binding Path=FirmwareDefinition.LoginMinorBytes[0], Converter={StaticResource HexByteConverter}}" Margin="115,63,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" />
+            <DI:CharacterRestrictedTextBox CharacterRestrictionRegex="^[0-9a-fA-F]+$" MaxLength="2" Text="{Binding Path=FirmwareDefinition.LoginMinorBytes[1], Converter={StaticResource HexByteConverter}}" Margin="140,63,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" />
+            <DI:CharacterRestrictedTextBox CharacterRestrictionRegex="^[0-9a-fA-F]+$" MaxLength="2" Text="{Binding Path=FirmwareDefinition.LoginMinorBytes[2], Converter={StaticResource HexByteConverter}}" Margin="165,63,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" />
+            <DI:CharacterRestrictedTextBox CharacterRestrictionRegex="^[0-9a-fA-F]+$" MaxLength="2" Text="{Binding Path=FirmwareDefinition.LoginMinorBytes[3], Converter={StaticResource HexByteConverter}}" Margin="190,63,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" />
+            <DI:CharacterRestrictedTextBox CharacterRestrictionRegex="^[0-9a-fA-F]+$" MaxLength="2" Text="{Binding Path=FirmwareDefinition.LoginMinorBytes[4], Converter={StaticResource HexByteConverter}}" Margin="215,63,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" />
         </Grid>
         <Grid Margin="0,10,0,0" VerticalAlignment="Bottom">
-            <Button x:Name="CancelButton" Content="Cancel" HorizontalAlignment="Right" Width="75" Height="20" VerticalAlignment="Bottom" IsCancel="True" RenderTransformOrigin="0.921,0.601" Grid.Column="1"/>
-            <Button x:Name="RescanButton" Content="Rescan" HorizontalAlignment="Right" Width="75" IsDefault="True" Margin="0,0,90   ,0"/>
+            <Button x:Name="CancelButton" Content="Cancel" HorizontalAlignment="Right" Width="75" IsCancel="True" />
+            <Button x:Name="RescanButton" Content="Rescan" HorizontalAlignment="Right" Width="75" IsDefault="True" Margin="0,0,90,0"/>
         </Grid>
 
     </StackPanel>
