--- a/DumpInspector/ScannerSettingsWindow.xaml
+++ b/DumpInspector/ScannerSettingsWindow.xaml
@@ -10,6 +10,7 @@
     
     <Window.Resources>
         <DI:HexByteConverter x:Key="HexByteConverter" />
+        <DI:ComboBoxToLongestItemWidthConverter x:Key="LongestItemWidthConverter" />
     </Window.Resources>
     
     <StackPanel Margin="10" FlowDirection="LeftToRight" VerticalAlignment="Bottom">
@@ -17,7 +18,7 @@
             <Label Content="UADVersion" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="6,8,0,0"/>
             <Label Content="LoginMajorByte" HorizontalAlignment="Left" Margin="6,36,0,0" VerticalAlignment="Top" />
             <Label Content="LoginMinorBytes" HorizontalAlignment="Left" Margin="6,62,0,0" VerticalAlignment="Top" />
-            <ComboBox Margin="115,12,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Name="UADVersionComboBox" />
+            <ComboBox ItemsSource="{Binding Path=UADVersions}" SelectedItem="{Binding Path=FirmwareDefinition.UADVersion}" Width="{Binding Path=UADVersions, Converter={StaticResource LongestItemWidthConverter}}" Margin="115,12,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" />
             <DI:CharacterRestrictedTextBox CharacterRestrictionRegex="^[0-9a-fA-F]+$" MaxLength="2" Text="{Binding Path=FirmwareDefinition.LoginMajorByte, Converter={StaticResource HexByteConverter}}" Margin="115,40,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" />
             <DI:CharacterRestrictedTextBox CharacterRestrictionRegex="^[0-9a-fA-F]+$" MaxLength="2" Text="{Binding Path=FirmwareDefinition.LoginMinorBytes[0], Converter={StaticResource HexByteConverter}}" Margin="115,63,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" />
             <DI:CharacterRestrictedTextBox CharacterRestrictionRegex="^[0-9a-fA-F]+$" MaxLength="2" Text="{Binding Path=FirmwareDefinition.LoginMinorBytes[1], Converter={StaticResource HexByteConverter}}" Margin="140,63,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" />
@@ -27,7 +28,7 @@
         </Grid>
         <Grid Margin="0,10,0,0" VerticalAlignment="Bottom">
             <Button x:Name="CancelButton" Content="Cancel" HorizontalAlignment="Right" Width="75" IsCancel="True" />
-            <Button x:Name="RescanButton" Content="Rescan" HorizontalAlignment="Right" Width="75" IsDefault="True" Margin="0,0,90,0"/>
+            <Button x:Name="RescanButton" Content="Rescan" HorizontalAlignment="Right" Width="75" IsDefault="True" Margin="0,0,90,0" Click="RescanButton_Click"/>
         </Grid>
 
     </StackPanel>
