--- a/DumpInspector/PasswordEditWindow.xaml
+++ b/DumpInspector/PasswordEditWindow.xaml
@@ -14,7 +14,7 @@
             <TextBox x:Name="Password" Margin="63,26,0,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
         </Grid>
         <Grid Margin="0,10,0,0">
-            <Button x:Name="CancelButton" Content="Cancel" HorizontalAlignment="Right" Width="75" Height="20" VerticalAlignment="Bottom" IsCancel="True" RenderTransformOrigin="0.921,0.601" Grid.Column="1"/>
+            <Button x:Name="CancelButton" Content="Cancel" HorizontalAlignment="Right" Width="75" Height="20" VerticalAlignment="Bottom" IsCancel="True" />
             <Button x:Name="SaveButton" Content="Save" HorizontalAlignment="Right" Width="75" IsDefault="True" Margin="0,0,90   ,0" Click="SaveButton_Click"/>
         </Grid>
 
