--- a/DumpInspector/ScannerSettingsWindow.xaml
+++ b/DumpInspector/ScannerSettingsWindow.xaml
@@ -3,28 +3,28 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:DI="clr-namespace:ProjectRH.DumpInspector"
+        xmlns:di="clr-namespace:ProjectRH.DumpInspector"
         Title="Scanner Settings"
         WindowStyle="ToolWindow"
         WindowStartupLocation="CenterOwner" ResizeMode="NoResize" SizeToContent="WidthAndHeight" d:DesignWidth="287" d:DesignHeight="169">
     
     <Window.Resources>
-        <DI:HexByteConverter x:Key="HexByteConverter" />
-        <DI:ComboBoxToLongestItemWidthConverter x:Key="LongestItemWidthConverter" />
+        <di:HexByteConverter x:Key="HexByteConverter" />
+        <di:ComboBoxToLongestItemWidthConverter x:Key="LongestItemWidthConverter" />
     </Window.Resources>
     
     <StackPanel Margin="10" FlowDirection="LeftToRight" VerticalAlignment="Bottom">
         <Grid Height="89">
-            <Label Content="UADVersion" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="6,8,0,0"/>
+            <Label Content="UadVersion" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="6,8,0,0"/>
             <Label Content="LoginMajorByte" HorizontalAlignment="Left" Margin="6,36,0,0" VerticalAlignment="Top" />
             <Label Content="LoginMinorBytes" HorizontalAlignment="Left" Margin="6,62,0,0" VerticalAlignment="Top" />
             <ComboBox ItemsSource="{Binding Path=UADVersions}" SelectedItem="{Binding Path=FirmwareDefinition.UADVersion}" Width="{Binding Path=UADVersions, Converter={StaticResource LongestItemWidthConverter}}" Margin="115,12,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" />
-            <DI:CharacterRestrictedTextBox CharacterRestrictionRegex="^[0-9a-fA-F]+$" MaxLength="2" Text="{Binding Path=FirmwareDefinition.LoginMajorByte, Converter={StaticResource HexByteConverter}}" Margin="115,40,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" />
-            <DI:CharacterRestrictedTextBox CharacterRestrictionRegex="^[0-9a-fA-F]+$" MaxLength="2" Text="{Binding Path=FirmwareDefinition.LoginMinorBytes[0], Converter={StaticResource HexByteConverter}}" Margin="115,63,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" />
-            <DI:CharacterRestrictedTextBox CharacterRestrictionRegex="^[0-9a-fA-F]+$" MaxLength="2" Text="{Binding Path=FirmwareDefinition.LoginMinorBytes[1], Converter={StaticResource HexByteConverter}}" Margin="140,63,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" />
-            <DI:CharacterRestrictedTextBox CharacterRestrictionRegex="^[0-9a-fA-F]+$" MaxLength="2" Text="{Binding Path=FirmwareDefinition.LoginMinorBytes[2], Converter={StaticResource HexByteConverter}}" Margin="165,63,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" />
-            <DI:CharacterRestrictedTextBox CharacterRestrictionRegex="^[0-9a-fA-F]+$" MaxLength="2" Text="{Binding Path=FirmwareDefinition.LoginMinorBytes[3], Converter={StaticResource HexByteConverter}}" Margin="190,63,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" />
-            <DI:CharacterRestrictedTextBox CharacterRestrictionRegex="^[0-9a-fA-F]+$" MaxLength="2" Text="{Binding Path=FirmwareDefinition.LoginMinorBytes[4], Converter={StaticResource HexByteConverter}}" Margin="215,63,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" />
+            <di:CharacterRestrictedTextBox CharacterRestrictionRegex="^[0-9a-fA-F]+$" MaxLength="2" Text="{Binding Path=FirmwareDefinition.LoginMajorByte, Converter={StaticResource HexByteConverter}}" Margin="115,40,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" />
+            <di:CharacterRestrictedTextBox CharacterRestrictionRegex="^[0-9a-fA-F]+$" MaxLength="2" Text="{Binding Path=FirmwareDefinition.LoginMinorBytes[0], Converter={StaticResource HexByteConverter}}" Margin="115,63,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" />
+            <di:CharacterRestrictedTextBox CharacterRestrictionRegex="^[0-9a-fA-F]+$" MaxLength="2" Text="{Binding Path=FirmwareDefinition.LoginMinorBytes[1], Converter={StaticResource HexByteConverter}}" Margin="140,63,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" />
+            <di:CharacterRestrictedTextBox CharacterRestrictionRegex="^[0-9a-fA-F]+$" MaxLength="2" Text="{Binding Path=FirmwareDefinition.LoginMinorBytes[2], Converter={StaticResource HexByteConverter}}" Margin="165,63,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" />
+            <di:CharacterRestrictedTextBox CharacterRestrictionRegex="^[0-9a-fA-F]+$" MaxLength="2" Text="{Binding Path=FirmwareDefinition.LoginMinorBytes[3], Converter={StaticResource HexByteConverter}}" Margin="190,63,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" />
+            <di:CharacterRestrictedTextBox CharacterRestrictionRegex="^[0-9a-fA-F]+$" MaxLength="2" Text="{Binding Path=FirmwareDefinition.LoginMinorBytes[4], Converter={StaticResource HexByteConverter}}" Margin="215,63,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" />
         </Grid>
         <Grid Margin="0,10,0,0" VerticalAlignment="Bottom">
             <Button x:Name="CancelButton" Content="Cancel" HorizontalAlignment="Right" Width="75" IsCancel="True" />
