--- a/DumpInspector/MainWindow.xaml
+++ b/DumpInspector/MainWindow.xaml
@@ -2,8 +2,9 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:self="clr-namespace:ProjectRH.DumpInspector"
-        Title="Firmware Reader" SizeToContent="Manual" Loaded="Window_Loaded" ResizeMode="CanResize" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" Icon="/ProjectRH.DumpInspector;component/ricoh_32x32.ico" Width="500" MinWidth="300" MinHeight="180" MaxHeight="180">
-    
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="ProjectRH.DumpInspector.MainWindow"
+        Title="Firmware Reader" SizeToContent="Height" Loaded="Window_Loaded" ResizeMode="CanResize" WindowStartupLocation="CenterScreen" Icon="icon.ico" Width="500" WindowStyle="ToolWindow">
+
     <Window.CommandBindings>
         <CommandBinding Command="self:Commands.Open"   Executed="OpenCommand_Executed" />
         <CommandBinding Command="self:Commands.Exit"   Executed="ExitCommand_Executed" />
@@ -11,9 +12,9 @@
         <CommandBinding Command="self:Commands.Clear"  Executed="ClearCommand_Executed" CanExecute="ExecuteIfFileOpen"  />
         <CommandBinding Command="self:Commands.ScannerSettings" Executed="ScannerSettingsCommand_Executed" CanExecute="ExecuteIfFileOpen" />
     </Window.CommandBindings>
-    
+
     <DockPanel LastChildFill="True">
-        
+
         <Menu IsMainMenu="True" VerticalAlignment="Top" DockPanel.Dock="Top">
             <MenuItem Header="_File">
                 <MenuItem Header="_Open NVRAM..." Command="self:Commands.Open" />
@@ -27,7 +28,7 @@
             </MenuItem>
         </Menu>
 
-        <StatusBar Name="StatusBar" DockPanel.Dock="Bottom">
+        <StatusBar x:Name="StatusBar" DockPanel.Dock="Bottom" Height="24">
             <StatusBar.ItemsPanel>
                 <ItemsPanelTemplate>
                     <Grid>
@@ -40,10 +41,10 @@
                 </ItemsPanelTemplate>
             </StatusBar.ItemsPanel>
 
-            <StatusBarItem Grid.Column="0" Name="FirmwareMessage" Foreground="#00F" HorizontalContentAlignment="Left">Ready</StatusBarItem>
+            <StatusBarItem Grid.Column="0" x:Name="FirmwareMessage" Foreground="#00F" HorizontalContentAlignment="Left" Content="Ready"/>
             <StatusBarItem Grid.Column="1" />
-            <StatusBarItem Grid.Column="2" Name="StatusMessage" ></StatusBarItem>
-            
+            <StatusBarItem Grid.Column="2" x:Name="StatusMessage" />
+
 
         </StatusBar>
 
