--- a/DumpInspector/MainWindow.xaml
+++ b/DumpInspector/MainWindow.xaml
@@ -63,7 +63,7 @@
                   BorderThickness="0" FontFamily="Segoe UI" HeadersVisibility="Column" GridLinesVisibility="All">
 
             <DataGrid.Columns>
-                <DataGridTextColumn Header="ID" Binding="{Binding UserId}" />
+                <DataGridTextColumn Header="ID" Binding="{Binding UserId}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Name" Binding="{Binding Username}" />
                 <DataGridTextColumn Header="Password" Binding="{Binding Password}" Width="*">
                     <DataGridTextColumn.CellStyle>
